--- a/d20/Cargo.toml
+++ b/d20/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dyn-clone = "1.0.16"
 nom = "7.1.3"
+num = "0.4.1"
